<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_event_"
            android:title="@string/menu_event"/>
        <item
            android:id="@+id/nav_myEvents"
            android:icon="@drawable/ic_my_events"
            android:title="@string/menu_myEvents"/>
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_register"
            android:title="@string/menu_register"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about"/>

    </group>

</menu>
